--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 <header>
   <div class="bg-image">
     <a href="#leadform"><picture>
-      <source media="(max-width: 768px)" srcset="images/mobile.png">
-      <img src="images/desktop.png" alt="Изображение">
+      <source media="(max-width: 768px)" srcset="images/mobile.png?v=1.0.2">
+      <img src="images/desktop.png?v=1.0.2" alt="Изображение">
     </picture></a>
   </div>
 </header>
